--- a/REACTJS/src/translations/en.json
+++ b/REACTJS/src/translations/en.json
@@ -36,7 +36,7 @@
             "manage-handbook": "Manage handbook"
         }
     },
-    "manage-user": {
+   "manage-user": {
         "add": "Add a new user",
         "email": "Email",
         "password": "Password",
@@ -50,5 +50,8 @@
         "image": "Avatar",
         "save": "Save user",
         "edit": "Edit changes"
-    }
+    },"homepage":{
+    "outstanding-doctor":"Last week's feartured doctors",
+    "more-infor":"More infor"
+}
 }
