--- a/REACTJS/src/translations/en.json
+++ b/REACTJS/src/translations/en.json
@@ -61,5 +61,11 @@
         "specialty": "Popular specialties",
         "facilities": "Outstanding medical facility",
         "about": "Media talk about Booking Care"
+    },
+    "manage-schedule": {
+        "title": "Manage doctor's examination plan",
+        "choose-doctor": "Choose doctor",
+        "choose-date": "Choose date",
+        "save": "Save Infor"
     }
 }
