--- a/REACTJS/src/translations/en.json
+++ b/REACTJS/src/translations/en.json
@@ -67,5 +67,22 @@
         "choose-doctor": "Choose doctor",
         "choose-date": "Choose date",
         "save": "Save Infor"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "Schedule",
+            "no-schedule": "The doctor does not have an appointment during this time, please choose another time",
+            "choose": "Choose",
+            "book-free": " and book (free)"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Create more information doctor",
+            "select-doctor": "Select doctor",
+            "intro": "Information introduction",
+            "add": "Create information",
+            "save": "Save information"
+        }
     }
 }
