--- a/REACTJS/src/translations/en.json
+++ b/REACTJS/src/translations/en.json
@@ -82,7 +82,13 @@
             "select-doctor": "Select doctor",
             "intro": "Information introduction",
             "add": "Create information",
-            "save": "Save information"
+            "save": "Save information",
+            "price": "Price",
+            "payment": "Payment",
+            "province": "Province",
+            "nameClinic": "Clinic's name",
+            "addressClinic": "Clinic's address",
+            "note": "Note"
         }
     }
 }
