--- a/REACTJS/src/translations/vi.json
+++ b/REACTJS/src/translations/vi.json
@@ -81,6 +81,20 @@
             "detail": "Xem chi tiết",
             "payment": "Phương thức thanh toán ",
             "hide-price": "Ẩn bảng giá"
+        },
+        "booking-modal": {
+            "title": "Thông tin đặt lịch khám bệnh",
+            "fullName":"Họ và tên",
+            "phoneNumber":"Số điện thoại",
+            "email": "Địa chỉ email: ",
+            "address": "Địa chỉ liên lạc",
+            "reason": "Lý do khám: ",
+            "birthday": "Ngày sinh",
+            "gender": "Giới tính",
+            "btnConfirm": "Xác nhận",
+            "btnCancel": "Hủy",
+            "priceBooking": "Miễn phí đặt lịch",
+            "price" : "Giá khám bệnh: "
         }
     },
     "admin": {
